--- a/docs/测试策略文档.md
+++ b/docs/测试策略文档.md
@@ -54,7 +54,7 @@
 #### 技术栈测试
 - **Next.js 15**: 前端框架功能测试
 - **Prisma + SQLite**: 数据库操作测试
-- **Vitest**: 单元测试框架
+- **Jest**: 单元测试框架（从Vitest迁移）
 - **WebAssembly**: Rust编译的WASM模块测试
 
 ### 1.3 测试策略
@@ -99,6 +99,138 @@
 | E2E测试 | 核心场景 | 发布前 | < 45分钟 |
 
 ## 3. 单元测试
+
+### 3.1 Jest测试框架配置
+
+#### 3.1.1 Jest配置文件 (jest.config.js)
+
+```javascript
+const nextJest = require('next/jest')
+
+const createJestConfig = nextJest({
+  // Next.js应用的路径
+  dir: './'
+})
+
+// Jest的自定义配置
+const customJestConfig = {
+  // 测试环境
+  testEnvironment: 'jest-environment-jsdom',
+  
+  // 模块路径映射
+  moduleNameMapping: {
+    '^@/(.*)$': '<rootDir>/$1',
+    '^@/lib/(.*)$': '<rootDir>/lib/$1',
+    '^@/app/(.*)$': '<rootDir>/app/$1',
+    '^@/components/(.*)$': '<rootDir>/components/$1'
+  },
+  
+  // 测试文件匹配模式
+  testMatch: [
+    '**/__tests__/**/*.(js|jsx|ts|tsx)',
+    '**/*.(test|spec).(js|jsx|ts|tsx)'
+  ],
+  
+  // 覆盖率配置
+  collectCoverageFrom: [
+    'app/**/*.{js,jsx,ts,tsx}',
+    'lib/**/*.{js,jsx,ts,tsx}',
+    '!**/*.d.ts',
+    '!**/node_modules/**',
+    '!**/.next/**'
+  ],
+  
+  // 覆盖率阈值
+  coverageThreshold: {
+    global: {
+      branches: 85,
+      functions: 85,
+      lines: 85,
+      statements: 85
+    }
+  },
+  
+  // 测试设置文件
+  setupFilesAfterEnv: ['<rootDir>/jest.setup.js'],
+  
+  // 转换配置
+  transform: {
+    '^.+\\.(js|jsx|ts|tsx)$': ['babel-jest', { presets: ['next/babel'] }]
+  },
+  
+  // 模拟配置
+  moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx'],
+  
+  // 清除模拟
+  clearMocks: true,
+  
+  // 测试超时
+  testTimeout: 10000
+}
+
+// 导出Jest配置
+module.exports = createJestConfig(customJestConfig)
+```
+
+#### 3.1.2 Jest设置文件 (jest.setup.js)
+
+```javascript
+// Jest DOM扩展
+import '@testing-library/jest-dom'
+
+// 全局测试配置
+global.TextEncoder = TextEncoder
+global.TextDecoder = TextDecoder
+
+// 模拟环境变量
+process.env.NODE_ENV = 'test'
+process.env.JWT_SECRET = 'test-jwt-secret-key-for-testing-only'
+process.env.DATABASE_URL = 'file:./test.db'
+
+// 模拟Next.js路由
+jest.mock('next/navigation', () => ({
+  useRouter: () => ({
+    push: jest.fn(),
+    replace: jest.fn(),
+    back: jest.fn()
+  }),
+  useSearchParams: () => new URLSearchParams(),
+  usePathname: () => '/'
+}))
+
+// 模拟Prisma客户端
+jest.mock('@/lib/prisma', () => ({
+  prisma: {
+    user: {
+      findUnique: jest.fn(),
+      findMany: jest.fn(),
+      create: jest.fn(),
+      update: jest.fn(),
+      delete: jest.fn()
+    },
+    oAuthClient: {
+      findUnique: jest.fn(),
+      findMany: jest.fn(),
+      create: jest.fn(),
+      update: jest.fn()
+    },
+    // 其他模型的模拟...
+  }
+}))
+
+// 全局测试钩子
+beforeEach(() => {
+  // 清除所有模拟
+  jest.clearAllMocks()
+})
+
+afterEach(() => {
+  // 测试后清理
+  jest.restoreAllMocks()
+})
+```
+
+### 3.2 测试分类和组织
 
 ### 3.1 测试框架配置
 
