--- a/docs/index-2025-06-26.md
+++ b/docs/index-2025-06-26.md
@@ -151,10 +151,10 @@ Mermaid 渲染示例：
 
 ```jsonc
 "paths": {
-  "@/*":       ["./*", "./*"],
-  "@/app/*":   ["./app/*", "./app/*"],
-  "@/components/*": ["./components/*", "./components/*"],
-  "@/lib/*":   ["./lib/*", "./lib/*"]
+  "@/*": ["./*"],
+  "@/app/*": ["./app/*"],
+  "@/components/*": ["./components/*"],
+  "@/lib/*": ["./lib/*"]
 }
 ```
 
